--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -63,77 +63,67 @@ jobs:
       run: mvn clean package
 
     - name: Run Unit Tests
-      run: mvn test
+      run: |
+        mvn test
+        ls .
+        cd target
+        ls .
 
     - name: Publish Test Results
       uses: actions/upload-artifact@v2
       with:
         name: test-results
         path: target/surefire-reports
-#    steps:
-#    - uses: actions/checkout@v2
-#
-#    - name: Set up JDK 11
-#      uses: actions/setup-java@v2
-#      with:
-#        java-version: 11
-#        distribution: 'temurin'
-#
-#    - name: Build with Maven
-#      run: mvn -B clean package
-#
-#    - name: Run tests with Maven
-#      run: mvn test
 
 
-  deploy:
-      runs-on: ubuntu-latest
-      needs: unit-tests
-      steps:
-      - name: Deploy to 000webhost
-        uses: SamKirkland/FTP-Deploy-Action@3.0.0
-        with:
-          server: files.000webhost.com
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /public_html/
-          local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
+  # deploy:
+  #     runs-on: ubuntu-latest
+  #     needs: unit-tests
+  #     steps:
+  #     - name: Deploy to 000webhost
+  #       uses: SamKirkland/FTP-Deploy-Action@3.0.0
+  #       with:
+  #         server: files.000webhost.com
+  #         username: ${{ secrets.FTP_USERNAME }}
+  #         password: ${{ secrets.FTP_PASSWORD }}
+  #         server-dir: /public_html/
+  #         local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
 
 
-  interface-tests:
-      runs-on: ubuntu-latest
-      needs: deploy
-      steps:
-        - uses: actions/checkout@v2
-        - name: Configurar ambiente
-          uses: actions/setup-node@v2
-          with:
-            node-version: '14'
+  # interface-tests:
+  #     runs-on: ubuntu-latest
+  #     needs: deploy
+  #     steps:
+  #       - uses: actions/checkout@v2
+  #       - name: Configurar ambiente
+  #         uses: actions/setup-node@v2
+  #         with:
+  #           node-version: '14'
 
-        - name: Instalar dependencias
-          run: npm install
-          working-directory: tests
+  #       - name: Instalar dependencias
+  #         run: npm install
+  #         working-directory: tests
 
-        - name: Executar testes de interface - Cypress
-          run: npm run cy:run
-          working-directory: tests
+  #       - name: Executar testes de interface - Cypress
+  #         run: npm run cy:run
+  #         working-directory: tests
   
   
-  jmeter-tests:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install JMeter
-        run: |
-          sudo apt-get update
-          sudo apt-get install default-jre -y
-          wget https://mirror.navercorp.com/apache//jmeter/binaries/apache-jmeter-5.4.3.tgz
-          tar -xzf apache-jmeter-5.4.3.tgz
-          rm apache-jmeter-5.4.3.tgz
-          mkdir -p apache-jmeter-5.4.3/lib
-          cp lib/jmeter-plugins-cmn-jmeter-0.4.jar apache-jmeter-5.4.3/lib
+  # jmeter-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: deploy
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Install JMeter
+  #       run: |
+  #         sudo apt-get update
+  #         sudo apt-get install default-jre -y
+  #         wget https://mirror.navercorp.com/apache//jmeter/binaries/apache-jmeter-5.4.3.tgz
+  #         tar -xzf apache-jmeter-5.4.3.tgz
+  #         rm apache-jmeter-5.4.3.tgz
+  #         mkdir -p apache-jmeter-5.4.3/lib
+  #         cp lib/jmeter-plugins-cmn-jmeter-0.4.jar apache-jmeter-5.4.3/lib
       
-      - name: Run Jmeter Tests
-        run: |
-          ./apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
+  #     - name: Run Jmeter Tests
+  #       run: |
+  #         ./apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
