--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-# Workflow to Build and run tests
+# Workflow to Build, Run tests and Deploy app
 
 name: Build Tests Deploy
 
@@ -76,54 +76,54 @@ jobs:
       run: cat target/surefire-reports/*.txt
 
 
-  # deploy:
-  #     runs-on: ubuntu-latest
-  #     needs: unit-tests
-  #     steps:
-  #     - name: Deploy to 000webhost
-  #       uses: SamKirkland/FTP-Deploy-Action@3.0.0
-  #       with:
-  #         server: files.000webhost.com
-  #         username: ${{ secrets.FTP_USERNAME }}
-  #         password: ${{ secrets.FTP_PASSWORD }}
-  #         server-dir: /public_html/
-  #         local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
+  deploy:
+      runs-on: ubuntu-latest
+      needs: unit-tests
+      steps:
+      - name: Deploy to 000webhost
+        uses: SamKirkland/FTP-Deploy-Action@3.0.0
+        with:
+          server: files.000webhost.com
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /public_html/
+          local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
 
 
-  # interface-tests:
-  #     runs-on: ubuntu-latest
-  #     needs: deploy
-  #     steps:
-  #       - uses: actions/checkout@v2
-  #       - name: Configurar ambiente
-  #         uses: actions/setup-node@v2
-  #         with:
-  #           node-version: '14'
+  interface-tests:
+      runs-on: ubuntu-latest
+      needs: deploy
+      steps:
+        - uses: actions/checkout@v2
+        - name: Configurar ambiente
+          uses: actions/setup-node@v2
+          with:
+            node-version: '14'
 
-  #       - name: Instalar dependencias
-  #         run: npm install
-  #         working-directory: tests
+        - name: Instalar dependencias
+          run: npm install
+          working-directory: tests
 
-  #       - name: Executar testes de interface - Cypress
-  #         run: npm run cy:run
-  #         working-directory: tests
+        - name: Executar testes de interface - Cypress
+          run: npm run cy:run
+          working-directory: tests
   
   
-  # jmeter-tests:
-  #   runs-on: ubuntu-latest
-  #   needs: deploy
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Install JMeter
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install default-jre -y
-  #         wget https://mirror.navercorp.com/apache//jmeter/binaries/apache-jmeter-5.4.3.tgz
-  #         tar -xzf apache-jmeter-5.4.3.tgz
-  #         rm apache-jmeter-5.4.3.tgz
-  #         mkdir -p apache-jmeter-5.4.3/lib
-  #         cp lib/jmeter-plugins-cmn-jmeter-0.4.jar apache-jmeter-5.4.3/lib
+  jmeter-tests:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install JMeter
+        run: |
+          sudo apt-get update
+          sudo apt-get install default-jre -y
+          wget https://mirror.navercorp.com/apache//jmeter/binaries/apache-jmeter-5.4.3.tgz
+          tar -xzf apache-jmeter-5.4.3.tgz
+          rm apache-jmeter-5.4.3.tgz
+          mkdir -p apache-jmeter-5.4.3/lib
+          cp lib/jmeter-plugins-cmn-jmeter-0.4.jar apache-jmeter-5.4.3/lib
       
-  #     - name: Run Jmeter Tests
-  #       run: |
-  #         ./apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
+      - name: Run Jmeter Tests
+        run: |
+          ./apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
