--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,6 +43,7 @@ jobs:
 
 
   unit-tests:
+    name: Unit Tests Run
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -77,37 +78,40 @@ jobs:
 
 
   deploy:
-      runs-on: ubuntu-latest
-      needs: unit-tests
-      steps:
-      - name: Deploy to 000webhost
-        uses: SamKirkland/FTP-Deploy-Action@3.0.0
-        with:
-          server: files.000webhost.com
-          ftp-server: files.000webhost.com
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /public_html/
-          local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
+    name: Deploy to WebHost
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+    - name: Deploy to 000webhost
+      uses: SamKirkland/FTP-Deploy-Action@3.0.0
+      with:
+        server: files.000webhost.com
+        ftp-server: files.000webhost.com
+        username: ${{ secrets.FTP_USERNAME }}
+        ftp-username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        ftp-password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: /public_html/
+        local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
 
 
   interface-tests:
-      runs-on: ubuntu-latest
-      needs: deploy
-      steps:
-        - uses: actions/checkout@v2
-        - name: Configurar ambiente
-          uses: actions/setup-node@v2
-          with:
-            node-version: '14'
+    name: Cypress e2e Tests
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - uses: actions/checkout@v2
+      - name: Configurar ambiente
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-        - name: Instalar dependencias
-          run: npm install
-          working-directory: tests
-
-        - name: Executar testes de interface - Cypress
-          run: npm run cy:run
-          working-directory: tests
+      - name: Instalar dependencias
+        run: npm install
+        working-directory: tests
+      - name: Executar Cypress
+        run: npm run cy:run
+        working-directory: tests
   
   
   jmeter-tests:
