--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -82,17 +82,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: unit-tests
     steps:
-    - name: Deploy to 000webhost
-      uses: SamKirkland/FTP-Deploy-Action@3.0.0
-      with:
-        server: files.000webhost.com
-        ftp-server: files.000webhost.com
-        username: ${{ secrets.FTP_USERNAME }}
-        ftp-username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        ftp-password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: /public_html/
-        local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
+    - name: Deploy to Plataform
+      run: echo "Azure for students not working :("
+      # uses: SamKirkland/FTP-Deploy-Action@3.0.0
+      # with:
+      #   server: files.000webhost.com
+      #   ftp-server: files.000webhost.com
+      #   username: ${{ secrets.FTP_USERNAME }}
+      #   ftp-username: ${{ secrets.FTP_USERNAME }}
+      #   password: ${{ secrets.FTP_PASSWORD }}
+      #   ftp-password: ${{ secrets.FTP_PASSWORD }}
+      #   server-dir: /public_html/
+      #   local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
 
 
   interface-tests:
