--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -78,7 +78,7 @@ jobs:
 
 
   deploy:
-    name: Deploy to WebHost
+    name: Deploy to Plataform
     runs-on: ubuntu-latest
     needs: unit-tests
     steps:
