--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -79,6 +79,7 @@ jobs:
 
   deploy:
     name: Deploy to Plataform
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: unit-tests
     steps:
