--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,20 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=br.cesjf:HotelLucena
+        
+      - name: Setar variável PIPELINE_EXECUTION_ID
+        run: echo "PIPELINE_EXECUTION_ID=${{ github.run_id }}" >> $GITHUB_ENV
+
+      - name: Gerar URL da badge
+          if [[ "${{ job.status }}" == "success" ]]; then
+            echo "BADGE_URL=https://img.shields.io/static/v1?label=Status&message=${{ job.status }}&color=green" >> $GITHUB_ENV
+          else
+            echo "BADGE_URL=https://img.shields.io/static/v1?label=Status&message=${{ job.status }}&color=red" >> $GITHUB_ENV
+      
+      - name: Atualizar README.md com a badge
+        run: |
+          echo "[![Status do Job](${{ env.BADGE_URL }})](https://github.com/lauraFCa/manutencaoSoft/actions/runs/${{ env.PIPELINE_EXECUTION_ID }})" >> README.md
+
 
 
   unit-tests:
