--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,8 +55,7 @@ jobs:
 
       - name: Atualizar README.md com a badge
         run: |
-          sed -i '5s/.*/[![Status do Job](${{ env.BADGE_URL }})](https://github.com/lauraFCa/manutencaoSoft/actions/runs/${{ env.PIPELINE_EXECUTION_ID }})/' readme.md
-
+          sed -i '5s~.*~[![Status do Job]($BADGE_URL)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~' readme.md
 
 
   unit-tests:
