--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,19 @@ jobs:
   build:
     name: Build and Analyze
     runs-on: ubuntu-latest
+    env:
+      GIT_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      
     steps:
+
+      - name: Configure Git
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git config --local credential.helper "store --file=.git/credentials"
+          echo "machine github.com login actions password $GIT_TOKEN" >> .git/credentials
+
+
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 
@@ -78,8 +90,6 @@ jobs:
 
       - name: Commit e push das alterações
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
           git add .
           git commit -m "Add badge to readme"
           git push
