--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,8 +23,6 @@ jobs:
   build:
     name: Build and Analyze
     runs-on: ubuntu-latest
-    env:
-      GIT_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       
     steps:
       - uses: actions/checkout@v3
@@ -37,13 +35,11 @@ jobs:
           distribution: 'zulu'
 
 
-      - name: Configure Git
+      - name: Configure Git user
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git config --local credential.helper "store --file=.git/credentials"
-          echo "https://github.com:${{ secrets.GIT_TOKEN }}@github.com" >> .git/credentials
-
+          git config --global user.name "Github Actions"
+          git config --global user.email ${{ secrets.USER_NAME }}
+          git config --global user.password ${{ secrets.USER_PASSWORD }}
 
       
       # - name: Cache SonarCloud packages
