--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -68,67 +68,90 @@ jobs:
       - name: Gerar URL da badge
         run: |
           if [[ "${{ job.status }}" == "success" ]]; then
-            echo "BADGE_URL=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=green" >> $GITHUB_ENV
+            echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=green" >> $GITHUB_ENV
           else
-            echo "BADGE_URL=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=red" >> $GITHUB_ENV
+            echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=red" >> $GITHUB_ENV
           fi
         shell: bash
 
-      - name: Obter conteúdo da linha 5
-        run: |
-          CONTENT=$(sed -n '5p' readme.md)
-          echo "CONTENT=$CONTENT" >> $GITHUB_ENV
-
       - name: Comando - Atualizar README.md com a badge
         run: |
-          echo sed -i "5s~.*~[![Status do Job]($BADGE_URL)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+          echo sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
       
-      - name: Run - Atualizar README.md com a badge
-        run: |
-          sed -i "5s~.*~[![Status do Job]($BADGE_URL)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+      # - name: Run - Atualizar README.md com a badge
+      #   run: |
+      #     sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
 
-      - name: Commit e push das alterações
-        run: |
-          git add .
-          git status
-          git commit -v -m "Add badge to readme"
-          git push -v
+      # - name: Commit e push das alterações
+      #   run: |
+      #     git add .
+      #     git status
+      #     git commit -v -m "Add badge to readme"
+      #     git push -v
 
 
 
-  # unit-tests:
-  #   name: Unit Tests Run
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Set up JDK 8
-  #     uses: actions/setup-java@v2
-  #     with:
-  #       java-version: 8
-  #       distribution: 'temurin'
+  unit-tests:
+    name: Unit Tests Run
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        java-version: 8
+        distribution: 'temurin'
 
-  #   - name: Cache Maven packages
-  #     uses: actions/cache@v2
-  #     with:
-  #       path: ~/.m2/repository
-  #       key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
-  #   - name: Build with Maven
-  #     run: mvn clean package
+    - name: Build with Maven
+      run: mvn clean package
 
-  #   - name: Run Unit Tests
-  #     run: |
-  #       mvn test
+    - name: Run Unit Tests
+      run: |
+        mvn test
 
-  #   - name: Publish Test Results
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: test-results
-  #       path: target/surefire-reports
+    - name: Publish Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: target/surefire-reports
     
-  #   - name: Display Test Results
-  #     run: cat target/surefire-reports/*.txt
+    - name: Display Test Results
+      run: cat target/surefire-reports/*.txt
+    
+    - name: Gerar URL da badge
+      run: |
+        if [[ "${{ job.status }}" == "success" ]]; then
+          echo "BADGE_URL_Unit=https://img.shields.io/static/v1?label=Unit-Tests\&message=success\&color=green" >> $GITHUB_ENV
+        else
+          echo "BADGE_URL_Unit=https://img.shields.io/static/v1?label=Unit-Tests\&message=success\&color=red" >> $GITHUB_ENV
+        fi
+      shell: bash
+
+    - name: Comando - Atualizar README.md com a badge
+      run: |
+        echo sed -i "7s~.*~[![Status do Job]($BADGE_URL_Unit)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+    
+    - name: Run - Badge Build and Analyse
+      run: |
+        sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+    
+    - name: Run - Badge Unit Tests
+      run: |
+        sed -i "7s~.*~[![Status do Job]($BADGE_URL_Unit)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+
+    - name: Commit e push das alterações
+      run: |
+        git add .
+        git status
+        git commit -v -m "Add badge to readme"
+        git push -v
 
 
   # deploy:
